corrections: jumbotron image  and gap colums

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ header a {
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 4em;
   font-weight: 800;
 }
   
@@ -35,6 +35,7 @@ h2 {
 
 h3 {
   padding: 30px 0px;
+  font-weight: 700;
 }
 
 .bordered p {
@@ -48,12 +49,12 @@ h3 {
 
 /*----------------------------------------------*/
 .container {
-  max-width: 850px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
 .sm-container {
-  max-width: 750px;
+  max-width: 1000px;
   margin: 0 auto;
 }
 
@@ -90,7 +91,6 @@ footer {
 .d-flex {
   display: flex;
 }
-
 
 .bg-blue {
   background-color: rgb(180, 208, 230);
@@ -167,7 +167,7 @@ header {
   padding-top: 40px;
 }
 
-/*relative class
+/*relative class*/
 .relative {
   position: relative;
   top: 80px;
@@ -191,22 +191,25 @@ header {
 /*4 colonne */
 .row {
   flex-wrap: wrap;
-  gap: 15px;
+  gap: 50px;
 }
 
 
 .col-33 {
-  width: calc(750px/3 - 15px);
+  width: calc(100%/3 - 50px);
 }
 
 .col-100 {
   position: relative;
-  width: calc(100% - 15px);
+  width: calc(100% - 50px);
   border: 1px solid lightgrey;
 }
 
 .bordered .col-33 {
   border: 1px solid lightgray;
+}
+.info{
+  padding: 0px 20px;
 }
 
 /*.info {
